syntax = "proto3";

package turnly.channels.v1.digital_signage;

import "digital-signage.requests.proto";
import "digital-signage.responses.proto";

service DigitalSignage {
  rpc GetPairingCode(GetPairingCodeDigitalSignageRequest)
    returns (GetPairingCodeDigitalSignageResponse) {}
  rpc PairToLocation(PairToLocationDigitalSignageRequest)
    returns (PairToLocationDigitalSignageResponse) {}
}
